--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <app-root>
-      <div
+      <!-- <div
         class="fade show"
         style="text-align: center; padding-top: calc(100vh / 2); height: 100vh"
       >
         <i class="spinner-grow spinner-grow-sm"></i>
         <span class="m-1">Loading...</span>
-      </div>
+      </div> -->
     </app-root>
   </body>
 </html>
